<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/homeFragment"
            android:icon="@drawable/ic_home"
            android:title="@string/home"
            app:showAsAction="always" />


        <item android:title="@string/content">
            <menu>
                <item
                    android:id="@+id/settingFragment"
                    android:icon="@drawable/ic_settings"
                    android:title="@string/settings" />
                <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_share"
                    android:title="@string/share" />
            </menu>
        </item>
        <item android:title="@string/about">
            <menu>
                <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/ic_settings"
                    android:title="@string/about" />

            </menu>
        </item>
    </group>
</menu>